⚙ Added options to remove certain folders from backup

--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
               <tr>
                 <th>Name</th>
                 <th>Kind</th>
-                <th>File Size</th>
+                <th>Backup enabled</th>
               </tr>
             </thead>
             <tbody id="files">
